[package]
name = "my_proxy_wasm_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm="0.2.1"
serde = {version = "1.0", features =["derive"]}
serde_json= "1.0"
log="0.4"

[package.metadata]
wasm-name-section = false
wasm-producers-section = false